fix(layout): increase keypad size significantly on mobile

--- a/index.css
+++ b/index.css
@@ -362,9 +362,9 @@ body {
   }
   
   .keypad-btn {
-    width: 5rem;
-    height: 5rem;
-    font-size: 2.1rem;
+    width: 6rem;
+    height: 6rem;
+    font-size: 2.5rem;
   }
 
   .text-2xl {
